--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>islam</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/home.svg" type="image/x-icon">
     <style>
         @import url(./css/stylehed.css);
@@ -19,7 +19,7 @@
 
         <div class="SidPar ">
             <div class="islamPic">
-                <img class="photo1" src="../assets/images/fig1.jpeg">
+                <img class="photo1" src="../assets/images/fig1.jpeg" alt="img">
 
             </div>
 
@@ -44,8 +44,8 @@
             </div>
             <ul class="linknav">
                 <li class="linksnav1"><a href="#">HOME </a> </li>
-                <li class="linksnav3"><a href="skills.html"> SKILLS</a></li>
-                <li class="linksnav4"><a href="contactMe.html"> CONTACT</a></li>
+                <li class="linksnav3"><a href="./html/skills.html"> SKILLS</a></li>
+                <li class="linksnav4"><a href="./html/contactMe.html"> CONTACT</a></li>
             </ul>
 
             <div class="nestedgrid">
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="../assets/images/fig1.jpeg">
+                    <img class="photoBox" src="../assets/images/fig1.jpeg" alt="img">
                 </div>
                 <div class="card">
                     <h2>EDUCATION<br></h2><br>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="../assets/images/ppu.jpeg">
+                    <img class="photoBox" src="../assets/images/ppu.jpeg" alt="img">
                 </div>
                 <div class="card">
                     <h2>VOLUNTEER EXPERIENCE</h2>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/fig3.jpeg">
+                    <img class="photoBox" src="./assets/images/fig3.jpeg" alt="fig">
                 </div>
                 <div class="card">
                     <h2>TRAINING </h2>
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/fig.jpeg">
+                    <img class="photoBox" src="./assets/images/fig.jpeg" alt="fid">
                 </div>
             </div>
 
