--- a/html/skills.html
+++ b/html/skills.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="../css/contact.css">
 </head>
 <style>
-    @import url(./css/main.css);
-    @import url(./css/stylehed.css);
+    @import url(../css/main.css);
+    @import url(../css/stylehed.css);
 </style>
 
 <body>
@@ -17,7 +17,7 @@
     <nav>
 
         <ul class="linknav">
-            <li class="linksnav1"><a href="index.html">HOME </a> </li>
+            <li class="linksnav1"><a href="../index.html">HOME </a> </li>
             <li class="linksnav3"><a href="#"> SKILLS</a></li>
             <li class="linksnav4"><a href="contactMe.html"> CONTACT</a></li>
         </ul>
