--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </div>
 
             <ul class="SidParBottom">
-                <li> <img src="..//assets/github.svg" width="20px" alt="github"> <a
+                <li> <img src="./assets/github.svg" width="20px" alt="github"> <a
                         href="https://github.com/islam201045">Github</a></li>
-                <li> <img src="..//assets/linkedin.svg" width="20px" alt="linkedin"> <a
+                <li> <img src="./assets/linkedin.svg" width="20px" alt="linkedin"> <a
                         href="www.linkedin.com/in/islam-khalil-ibrahim">linkedin</a></li>
-                <li> <img src="..//assets/whatsapp.svg" width="20px" alt="whatsapp"> <a href="">whatsapp</a></li>
-                <li><img src="../assets/images/facebook.png" alt="facebook" width="20px"> <a
+                <li> <img src="./assets/whatsapp.svg" width="20px" alt="whatsapp"> <a href="">whatsapp</a></li>
+                <li><img src="./assets/images/facebook.png" alt="facebook" width="20px"> <a
                         href="https://www.facebook.com/islam.k.dariyah/">Facebook</a></li>
-                <li> <img src="../assets/images/instagram.png" width="20px" alt="instagram"><a
+                <li> <img src="./assets/images/instagram.png" width="20px" alt="instagram"><a
                         href="https://www.instagram.com/islam.k.deriyah/"> Instagram</a>
                 </li>
 
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="../assets/images/fig1.jpeg" alt="img">
+                    <img class="photoBox" src="./assets/images/fig1.jpeg" alt="img">
                 </div>
                 <div class="card">
                     <h2>EDUCATION<br></h2><br>
@@ -73,7 +73,7 @@
 
                     <hr><br>
                     <p>
-                        <strong> <u> Computer Systems Engineering</u></strong> is a discipline that 
+                        <strong> <u> Computer Systems Engineering</u></strong> is a discipline that
                         combines computer science
                         with electrical and electronic engineering.
                         It focuses on the design, development, and maintenance of integrated
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="../assets/images/ppu.jpeg" alt="img">
+                    <img class="photoBox" src="./assets/images/ppu.jpeg" alt="img">
                 </div>
                 <div class="card">
                     <h2>VOLUNTEER EXPERIENCE</h2>
@@ -121,15 +121,16 @@
 
 
     </div>
-    
+
 </body>
 <footer class="footer ">
-        <div> <img src="..//assets/github.svg" width="20px" alt="github"> <a
-                href="https://github.com/islam201045">Github</a></div>
-        <div> <img src="..//assets/linkedin.svg" width="20px" alt="linkedin"> <a
-                href="www.linkedin.com/in/islam-khalil-ibrahim">linkedin</a></div>
-        <div> <img src="../assets/images/instagram.png" width="20px" alt="instagram"><a href=""> Instagram</a></div>
-        <div><img src="../assets/images/facebook.png" alt="facebook" width="20px"> <a href="">Facebook</a></div>
+    <div> <img src="./assets/github.svg" width="20px" alt="github"> <a href="https://github.com/islam201045">Github</a>
+    </div>
+    <div> <img src="./assets/linkedin.svg" width="20px" alt="linkedin"> <a
+            href="www.linkedin.com/in/islam-khalil-ibrahim">linkedin</a></div>
+    <div> <img src="./assets/images/instagram.png" width="20px" alt="instagram"><a href=""> Instagram</a></div>
+    <div><img src="./assets/images/facebook.png" alt="facebook" width="20px"> <a href="">Facebook</a></div>
 
-    </footer>
+</footer>
+
 </html>
