--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="SidPar ">
             <div class="islamPic">
-                <img class="photo1" src="../assets/images/fig1.jpeg" alt="img">
+                <img class="photo1" src="./assets/images/fig1.jpeg" alt="img">
 
             </div>
 
