--- a/html/skills.html
+++ b/html/skills.html
@@ -10,6 +10,7 @@
 <style>
     @import url(../css/main.css);
     @import url(../css/stylehed.css);
+    @import url(../css/footer.css);
 </style>
 
 <body>
