--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/home.svg" type="image/x-icon">
     <style>
+        @import url(./css/footer.css);
         @import url(./css/stylehed.css);
         @import url(./css/main.css);
     </style>
@@ -17,7 +18,7 @@
 <body>
     <div class="contener ">
 
-        <div class="SidPar ">
+        <nav class="SidPar ">
             <div class="islamPic">
                 <img class="photo1" src="./assets/images/fig1.jpeg" alt="img">
 
@@ -37,7 +38,7 @@
 
             </ul>
 
-        </div>
+        </nav>
         <main class="main box">
             <div class="into">
                 <h1> islam khalid khalil ibrahim</h1>
