--- a/html/contactMe.html
+++ b/html/contactMe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 <style>
+    @import url(../css/footer.css);
     @import url(../css/main.css);
     @import url(../css/stylehed.css);
 </style>
