--- a/html/skills.html
+++ b/html/skills.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/contact.css">
+    
+    <link rel="stylesheet" href="./css/small.css" media="screen and (max-width: 432px)">
+
 </head>
 <style>
     @import url(../css/main.css);
@@ -48,6 +51,7 @@
                 <li>Communication</li>
             </ul>
         </div>
+    </div>
         <footer class="footer">
             <div> <img src="..//assets/github.svg" width="20px" alt="github"> <a
                     href="https://github.com/islam201045">Github</a></div>
