--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>islam</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./assets/home.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/home.svg"  type="image/x-icon " >
+    <link rel="stylesheet" href="./css/small.css" media="screen and (max-width: 430px)">
     <style>
         @import url(./css/footer.css);
         @import url(./css/stylehed.css);
@@ -20,15 +21,24 @@
 
         <nav class="SidPar ">
             <div class="islamPic">
-                <img class="photo1" src="./assets/images/fig1.jpeg" alt="img">
-
+                <figure>
+                    <img class="photo1" src="./assets/images/fig1.jpeg" alt="img">
+                </figure>
             </div>
 
             <ul class="SidParBottom">
-                <li> <img src="./assets/github.svg" width="20px" alt="github"> <a
-                        href="https://github.com/islam201045">Github</a></li>
-                <li> <img src="./assets/linkedin.svg" width="20px" alt="linkedin"> <a
-                        href="www.linkedin.com/in/islam-khalil-ibrahim">linkedin</a></li>
+                <li>
+                    <img src="./assets/github.svg" width="20px" alt="github"> <a
+                        href="https://github.com/islam201045">Github</a>
+
+                </li>
+                <li>
+                    <figure>
+                        <img src="./assets/linkedin.svg" width="20px" alt="linkedin"> <a
+                            href="www.linkedin.com/in/islam-khalil-ibrahim">linkedin</a>
+
+                    </figure>
+                </li>
                 <li> <img src="./assets/whatsapp.svg" width="20px" alt="whatsapp"> <a href="">whatsapp</a></li>
                 <li><img src="./assets/images/facebook.png" alt="facebook" width="20px"> <a
                         href="https://www.facebook.com/islam.k.dariyah/">Facebook</a></li>
@@ -65,7 +75,10 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/fig1.jpeg" alt="img">
+                    <figure>
+                        <img class="photoBox" src="./assets/images/fig1.jpeg" alt="img">
+                        <figcaption>fig 1: my picture </figcaption>
+                    </figure>
                 </div>
                 <div class="card">
                     <h2>EDUCATION<br></h2><br>
@@ -85,7 +98,10 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/ppu.jpeg" alt="img">
+                    <figure>
+                        <img class="photoBox" src="./assets/images/ppu.jpeg" alt="img">
+                        <figcaption>Fig 3: PPU </figcaption>
+                    </figure>
                 </div>
                 <div class="card">
                     <h2>VOLUNTEER EXPERIENCE</h2>
@@ -100,7 +116,10 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/fig3.jpeg" alt="fig">
+                    <figure>
+                        <img class="photoBox" src="./assets/images/fig3.jpeg" alt="fig">
+                        <figcaption>Fig 3</figcaption>
+                    </figure>
                 </div>
                 <div class="card">
                     <h2>TRAINING </h2>
@@ -114,7 +133,10 @@
                 </div>
 
                 <div class="card">
-                    <img class="photoBox" src="./assets/images/fig.jpeg" alt="fid">
+                    <figure>
+                        <img class="photoBox" src="./assets/images/fig.jpeg" alt="fid">
+                        <figcaption> Fig 4</figcaption>
+                    </figure>
                 </div>
             </div>
 
